タスク管理、メモ管理、買うものリスト機能を実装

--- a/app/templates/app/_header.html
+++ b/app/templates/app/_header.html
@@ -16,6 +16,15 @@
           <a class="nav-link" href="/carbohydratepro/">ホーム</a>
         </li>
         <li class="nav-item m-1">
+          <a class="nav-link" href="{% url 'task_list' %}">タスク管理</a>
+        </li>
+        <li class="nav-item m-1">
+          <a class="nav-link" href="{% url 'memo_list' %}">メモ管理</a>
+        </li>
+        <li class="nav-item m-1">
+          <a class="nav-link" href="{% url 'shopping_list' %}">買うものリスト</a>
+        </li>
+        <li class="nav-item m-1">
           <a class="nav-link" href="/logout/">ログアウト</a>
         </li>
       </ul>
