支出管理の名称パス変更

--- a/app/templates/app/_header.html
+++ b/app/templates/app/_header.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="/top/">トップ</a>
         </li>
         <li class="nav-item m-1">
-          <a class="nav-link" href="/carbohydratepro/">ホーム</a>
+          <a class="nav-link" href="{% url 'expense_list' %}">支出管理</a>
         </li>
         <li class="nav-item m-1">
           <a class="nav-link" href="{% url 'task_list' %}">タスク管理</a>
